@@ -26,6 +26,7 @@ allprojects {
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    useJUnit()
     testLogging {
         exceptionFormat "full"
         events "started", "skipped", "passed", "failed"
@@ -34,5 +35,35 @@ tasks.withType(Test) {
 }
 
 task test(type: Test){
+    useJUnit()
+    useTestNG()
     useJUnitPlatform()
+    // set a system property for the test JVM(s)
+    systemProperty 'some.prop', 'value'
+
+    // explicitly include or exclude tests
+    include 'app/src/test/**'
+
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // Fail the 'test' task on the first test failure
+    failFast = true
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+    }
 }
